--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -5,6 +5,18 @@
   align-items: center;
 }
 
+.login-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login-logotext {
+  font-size: 36px;
+  color: white;
+  margin-bottom: 20px;
+}
+
 .login-container {
   background-color: white;
   padding: 40px 30px;
