--- a/client/src/pages/Auth.css
+++ b/client/src/pages/Auth.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background: linear-gradient(to right, #c9d2e4, #cad9ee);
+  background: linear-gradient(to right, #f4f5f7, #dae3f0);
   font-family: sans-serif;
   color: #222;
 }
