--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,3 +1,12 @@
+* {
+  text-decoration: none;
+  
+}
+
+body {
+  background: linear-gradient(135deg, #7f83d0, #abade1);
+ }
+
 .home-wrapper {
 	display: flex;
 	flex-direction: column;
@@ -10,34 +19,67 @@
 	padding-right: 30px; 
 	max-width: 1000px; 
 	margin: 0 auto; 
+  box-shadow: 0 0 20px #433c75;
+  border-radius: 15px;
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #4d68e0;
-  color: white;
-  padding: 15px 30px;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  background-color: #3f46cd;
+  padding: 11px 12px;
+  margin-bottom: 30px;
+  box-shadow: 0 0 20px black;
 }
 
-.navbar-title {
-  font-size: 20px;
+.navbar-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar-logo a{
+  margin-left: 8px;
+  font-size: 25px;
+  font-weight: 600;
+  color:white;
+  font-family: sans-serif;
+}
+
+.navbar-list{
+  list-style: none;
+  display: inline-block;
+}
+
+.navbar-list a{
+  color:white; 
+  font-size: 18px;
   font-weight: bold;
+}
+
+.navbar-separation {
+  margin-right: 20px;
+  margin-left: 20px;
+  color:white; 
+  font-size: 25px;
+}
+
+.navbar-list a:hover {
+  color: #00000074;
 }
 
 .navbar-logout-button {
   background-color: #f44336;
   color: white;
   border: none;
-  padding: 8px 14px;
+  padding: 7px 12px;
   border-radius: 5px;
   font-size: 14px;
   cursor: pointer;
+}
+
+.navbar-logout-button a{
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .navbar-logout-button:hover {
@@ -85,6 +127,15 @@
 
 .home-task-table tbody tr:last-of-type {
 	border-bottom: 2px solid #4d68e0;
+}
+
+.table-allign-center-column {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.table-checkbox {
+  transform: scale(1.5);
 }
 
 .create-task-button {
